# CW5

./: .dockerignore  .env  .env.template  .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci-cd.yml
config/: celery.py  settings.py  urls.py
docker/: wait-for-it.sh
docker/entrypoint/: backend-entrypoint.sh  celery-beat-entrypoint.sh  celery-worker-entrypoint.sh
habits/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py
telegram_bot/: bot.py  tasks.py
telegram_bot/management/commands/: runbot.py
users/: models.py  signals.py
users/migrations/: 0001_initial.py
