[tool.poetry]
name = "cw5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.1"
drf-yasg = "^1.21.10"
celery = "^5.5.3"
redis = "^6.3.0"
psycopg2-binary = "^2.9.10"
djangorestframework-simplejwt = "^5.5.1"
django-celery-beat = "^2.8.1"
python-telegram-bot = "13.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
